// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test BaseInfoFormItem should match snapshot 1`] = `
<Fragment>
  <section>
    <FormItemNoLabel
      name="workflow_subject"
      rules={
        [
          {
            "message": "请输入工单名称",
            "required": true,
          },
          {
            "validator": [Function],
          },
          {
            "max": 59,
          },
        ]
      }
    >
      <FormInputBotBorder
        className="workflow-name-input-wrapper"
        placeholder="请输入工单名称"
      />
    </FormItemNoLabel>
  </section>
  <FormItemLabel
    className="workflow-base-info-ops-type-form-item"
    label="运维类型"
    name="ops_type_uid"
  >
    <OpsTypeField />
  </FormItemLabel>
  <FormItemLabel
    label="审批流程模板"
    name="workflow_template_id"
    rules={
      [
        {
          "message": "请选择审批流程模板",
          "required": false,
        },
      ]
    }
    tooltip="多套审批模板时请选择本次工单使用的审批流程"
  >
    <BasicSelect
      loading={false}
      options={[]}
      placeholder="请选择审批流程模板"
    />
  </FormItemLabel>
  <FormItemLabel
    className="workflow-base-info-desc-form-item"
    label="工单描述"
    name="desc"
  >
    <ForwardRef(InternalTextArea)
      autoSize={
        {
          "maxRows": 10,
          "minRows": 8,
        }
      }
      maxLength={3000}
      placeholder="点此添加工单描述（选填）"
      showCount={true}
    />
  </FormItemLabel>
</Fragment>
`;

exports[`test BaseInfoFormItem should match snapshot with slot 1`] = `
<Fragment>
  <section>
    <FormItemNoLabel
      name="workflow_subject"
      rules={
        [
          {
            "message": "请输入工单名称",
            "required": true,
          },
          {
            "validator": [Function],
          },
          {
            "max": 59,
          },
        ]
      }
    >
      <FormInputBotBorder
        className="workflow-name-input-wrapper"
        placeholder="请输入工单名称"
      />
    </FormItemNoLabel>
  </section>
  <div>
     slot 
  </div>
  <FormItemLabel
    className="workflow-base-info-ops-type-form-item"
    label="运维类型"
    name="ops_type_uid"
  >
    <OpsTypeField />
  </FormItemLabel>
  <FormItemLabel
    label="审批流程模板"
    name="workflow_template_id"
    rules={
      [
        {
          "message": "请选择审批流程模板",
          "required": false,
        },
      ]
    }
    tooltip="多套审批模板时请选择本次工单使用的审批流程"
  >
    <BasicSelect
      loading={false}
      options={[]}
      placeholder="请选择审批流程模板"
    />
  </FormItemLabel>
  <FormItemLabel
    className="workflow-base-info-desc-form-item"
    label="工单描述"
    name="desc"
  >
    <ForwardRef(InternalTextArea)
      autoSize={
        {
          "maxRows": 10,
          "minRows": 8,
        }
      }
      maxLength={3000}
      placeholder="点此添加工单描述（选填）"
      showCount={true}
    />
  </FormItemLabel>
</Fragment>
`;
